--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang"en">
-<head>
-  <meta charset="UTF-8">
-  <title>todo list</title>
-  <script src="../routes/index.js"></script>
-<body>
-  <h1>Snobbish Todo</h1>
-  <form action="input"
-</head>
+<html>
+  <head>
+    <title><%= title="snobbish" %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
+  </body>
 </html>
