connect database and query

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,20 @@
     <p>Welcome to
         <%= title %>
     </p>
-    <form method="POST" action="/api" class="store">
+    <form method="POST" action="/api/todo" class="store">
         Enter To Do List item:
         <br>
         <input type="text" name="to-do-item">
         <br>
-        <input type="add" value="Add">
+        <button type="add" value="add">Add</button>
     </form>
+    <div class="list-body" To-Do>
+        <div class="panel-body">
+            <span class="list-group">
+                <div class="list-group-item" method="GET" action="display"></div>
+            </span>
+        </div>
+    </div>
 </body>
 
 </html>
