--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title="To Do List" %>
+        <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
@@ -11,7 +11,7 @@
 <body>
     <h1><%= title %></h1>
     <p>Welcome to
-        <%= title %>
+        <%= banana %>
     </p>
     <form method="POST" action="/api/todo" class="store">
         Enter To Do List item:
