--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,13 @@
         <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
 </head>
 
 <body>
     <h1><%= title %></h1>
     <p>Welcome to
-        <%= banana %>
+        <%= title %>
     </p>
     <form method="POST" action="/api/todo" class="store">
         Enter To Do List item:
@@ -23,10 +24,21 @@
     <div class="list-body" To-Do>
         <div class="panel-body">
             <span class="list-group">
-                <div class="list-group-item" method="GET" action="display"></div>
+                <div>
+                  <% for( let i = 0; i < todos.length; i++ ) { %>
+                    <div>
+                      <input type="checkbox"/>
+                      <div id="<%= i %>" onclick="clicky('<%= i %>')" style="display: inline-block" contentEditable="false" action="edit" method="PUT">
+                      <%= todos[ i ].task %>
+                      </div>
+                    </div>
+                  <% } %>
+              </div>
             </span>
         </div>
+        <button type="complete" name="complete">Mark as Complete</button>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
