--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,23 +14,23 @@
     <p>Welcome to
         <%= title %>
     </p>
-    <form method="POST" action="/api/todo" class="store">
+    <form method="POST" action="/api/todo">
         Enter To Do List item:
         <br>
         <input type="text" name="item">
-        <br>
         <button type="submit">Add</button>
     </form>
+    <br>
     <div class="list-body" To-Do>
         <div class="panel-body">
             <span class="list-group">
-                <div>
+                <div id="whole">
                   <% for( let i = 0; i < todos.length; i++ ) { %>
                     <div>
-                      <input type="checkbox"/>
-                      <div id="<%= i %>" onclick="clicky('<%= i %>')" style="display: inline-block" contentEditable="false" action="edit" method="PUT">
+                      <input type="checkbox" id="checkbox<%= i %>" />
+                      <label id="<%= i %>" onclick="clicky('<%= i %>')" style="display: inline-block" contentEditable="false" action="edit" method="PUT">
                       <%= todos[ i ].task %>
-                      </div>
+                    </label>
                     </div>
                   <% } %>
               </div>
@@ -38,9 +38,11 @@
         </div>
         <button type="complete" name="complete">Mark as Complete</button>
     </div>
-    <div>
-      <button type="delete" name="delete">Delete</button>
-    </div>
+    <form method="DELETE" action="/api/delete">
+      <div>
+        <button type="delete">Delete</button>
+      </div>
+    </form>
     <script src="main.js"></script>
 </body>
 
