cake background and blur field, notes from dev

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #5AB1FF;
+  color: #7BE38E;
 }
 
 a {
@@ -10,4 +10,19 @@ a {
 
 .completed {
   text-decoration: line-through;
+}
+
+.background {
+  background-image:url(../images/Christmas-desserts-634x641.jpg);
+  background-repeat: no-repeat;
+  background-size: 1080px auto;
+  
+}
+
+.rug {
+  position: relative;
+  z-index: 100;
+  padding: 20px;
+  background: rgb(34,34,34); /* for IE */
+  background: rgba(34,34,34,0.75);
 }
