--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
 
 </head>
 
-<body>
+<body class="background">
+  <div class="rug">
     <h1><%= title %></h1>
     <p>Welcome to
         <%= title %>
@@ -47,6 +48,7 @@
         <button type="delete" name="delete">Delete</button>
         </div>
     </form>
+  </div>
 
     <script src="main.js"></script>
 </body>
